2000-11-08  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime-utils.c: Added Gtk-Doc style comments to all the
	functions.
	(g_mime_utils_best_encoding): Return a GMimePartEncodingType
	instead of gint.

2000-11-01  Jeffrey Stedfast  <fejj@helixcode.com>

	* Makefile.am (INCLUDES): Add -DG_LOG_DOMAIN=\"gmime\"

2000-10-31  Jeffrey Stedfast  <fejj@helixcode.com>

	* test-parser.c (test_parser): Test g_mime_message_get_body() here
	as well.

	* test-mime.c: Updated to reflect changes to get_body.
	
	* gmime-message.c (g_mime_message_get_body): Return an allocated
	buffer because we want to return the decoded message body rather
	than the (possibly) encoded form.
	(create_header): Write out the arbitrary headers first as they may
	contain headers like "Received:" which really ought to be at the
	top.

	* gmime-part.c: Removed some old cruft.

2000-10-29  Jeffrey Stedfast  <fejj@helixcode.com>

	* internet-address.c (encoded_name): Use
	g_mime_utils_8bit_header_encode_phrase() to encode the addrspec.

	* gmime-utils.c (g_mime_utils_8bit_header_decode): Fix to make the
	decoder more rfc compliant. As stated by rfc2047, all white space
	between encoded words MUST be ignored.
	(g_mime_utils_8bit_header_encode_phrase): New rfc2047 encoding
	function for phrases (see rfc2047 section 5 part 3).

2000-10-28  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime-utils.c (parse_rfc822_date): Fixed the off-by-one-hour
	bug.

	* test-mime.c: Updated to reflect changes to
	g_mime_message_get_body().

	* gmime-message.c (g_mime_message_get_headers): Added Gtk-Doc
	comment.
	(g_mime_message_get_body): Modified to return a const pointer to
	the message body rather than allocating it.

2000-10-28  Charles Kerr <charles@superpimp.org>

	* gmime-message.c (g_mime_message_get_headers): New function
	similar to g_mime_message_get_body.  Useful if you want a raw
	display of headers separate from the body.

	* gmime-message.[c,h] (g_mime_message_get_body): made const.
