@@ -1,5 +1,8 @@
 2000-11-08  Jeffrey Stedfast  <fejj@helixcode.com>
 
+	* internet-address.c (internet_address_to_string): Moved code
+	around to avoid unecessary warnings.
+
 	* gmime-utils.c: Added Gtk-Doc style comments to all the
 	functions.
 	(g_mime_utils_best_encoding): Return a GMimePartEncodingType
